fixed too large table in delete modal

--- a/src/main/resources/assets/css/custom.css
+++ b/src/main/resources/assets/css/custom.css
@@ -111,3 +111,6 @@ div.awesomplete {
 .clickable-row {
     cursor: pointer;
 }
+.fixed-table-body {
+    height: auto;
+}
